# facecontroller

./: .gitignore
behavior_expression_skill_msg/: CMakeLists.txt  README.md  package.xml
behavior_expression_skill_msg/msg/: DanceStartInfo.msg  FaceInfo.msg  GestureInfo.msg  GestureProfileInfo.msg  TTSSetProperties.msg
behavior_expression_skill_msg/srv/: AffectiveState.srv  DanceInfo.srv  ExpressionCommand.srv  Face.srv  SpeechSynthesis.srv  Unit.srv  UnitInfo.srv
white_face_controller/: CMakeLists.txt  package.xml
white_face_controller/scripts/face_generator_package/: DanceManager.py  FaceGeneratorNode.py  clientexample.py
white_face_controller/scripts/face_player_package/: FacePlayerNode.py  FindID.py  PA2Face.py
